--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -599,6 +599,10 @@ $lightGreen: #9aecec;
           color: #555;
         }
 
+        h3{
+          font-size: 10px;
+        }
+
         .post {
           display: flex;
           flex-direction: column;
@@ -750,6 +754,10 @@ $lightGreen: #9aecec;
       // padding-left: 30px;
       // padding-right: 30px;
       color: black;
+    }
+    
+    .view_post_approved{
+      text-align: right;
     }
 
     .view_post_content{
